# RayTracer

./: CMakeLists.txt
Include/: Canvas.h  Tuple.h
Src/: Canvas.cpp  ProjectileMotion.cpp  Tuple.cpp  main.cpp
Tests/: canvasTests.cpp  tupleTests.cpp
